--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ snowflake-connector-python>=3.5.0
 sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0
 redis>=4.5.0
+networkx>=2.8.0
 
 # Machine Learning & Time Series
 tensorflow>=2.13.0
@@ -109,6 +110,7 @@ python-dateutil>=2.8.0
 pytz>=2023.3
 schedule>=1.2.0
 psutil>=5.9.0
+croniter>=1.4.0
 
 # Data Validation
 great-expectations>=0.17.0
